[gd_scene load_steps=24 format=1]

[ext_resource path="res://scripts/level.gd" type="Script" id=1]
[ext_resource path="res://scenes/anouncer.tscn" type="PackedScene" id=2]
[ext_resource path="res://gameart/superpower/sky-background.png" type="Texture" id=3]
[ext_resource path="res://gameart/superpower/mountain-background.png" type="Texture" id=4]
[ext_resource path="res://scenes/tileset.tres" type="TileSet" id=5]
[ext_resource path="res://scenes/company.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/tree.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]

resource/name = "bink_loose"
length = 0.4
loop = false
step = 0.1

[sub_resource type="Animation" id=2]

resource/name = "blink"
length = 0.4
loop = false
step = 0.1

[sub_resource type="Animation" id=3]

resource/name = "blink_texp"
length = 0.4
loop = false
step = 0.1

[sub_resource type="Animation" id=4]

resource/name = "blink_win"
length = 0.4
loop = false
step = 0.1

[sub_resource type="Animation" id=5]

resource/name = "unblink"
length = 0.4
loop = false
step = 0.1

[sub_resource type="Animation" id=6]

resource/name = "unblink_loose"
length = 0.4
loop = false
step = 0.1

[sub_resource type="Animation" id=7]

resource/name = "unblink_texp"
length = 0.4
loop = false
step = 0.1

[sub_resource type="Animation" id=8]

resource/name = "unblink_win"
length = 0.4
loop = false
step = 0.1

[sub_resource type="NavigationPolygon" id=9]

vertices = Vector2Array( 203, 149, 169, 148, 173, 96, 320, 96, 232, 154, 320, 240, 232, 176, 0, 240, 196, 178, 151, 175, 0, 96, 141, 96 )
polygons = [ IntArray( 0, 1, 2, 3 ), IntArray( 4, 0, 3 ), IntArray( 4, 3, 5, 6 ), IntArray( 6, 5, 7, 8 ), IntArray( 9, 8, 7 ), IntArray( 9, 7, 10, 11 ) ]
outlines = [ Vector2Array( 0, 96, 141, 96, 151, 175, 196, 178, 232, 176, 232, 154, 203, 149, 169, 148, 173, 96, 320, 96, 320, 240, 0, 240 ) ]

[sub_resource type="ConvexPolygonShape2D" id=10]

custom_solver_bias = 0.0
points = Vector2Array( 640, 0, 676, -65, 703, 555, 640, 480 )

[sub_resource type="ConvexPolygonShape2D" id=11]

custom_solver_bias = 0.0
points = Vector2Array( 640, 480, 703, 555, -54, 559, 0, 480 )

[sub_resource type="ConvexPolygonShape2D" id=12]

custom_solver_bias = 0.0
points = Vector2Array( 0, 480, -54, 559, -84, -51, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=13]

custom_solver_bias = 0.0
points = Vector2Array( 0, 0, -84, -51, 676, -65, 640, 0 )

[sub_resource type="GDScript" id=14]

script/source = "extends TileMap\n\nonready var timer = get_node( \"ctrltimer\" )\nfunc _ready():\n\tget_parent().connect( \"start_game\", self, \"_start_game\" )\n\tget_parent().connect( \"end_game\", self, \"_end_game\" )\nfunc _start_game():\n\tvar companies = get_tree().get_nodes_in_group( \"nazis_company\" )\n\tfor c in companies:\n\t\tc.set_men_speed( 20 )\n\tget_node( \"german_company1\" ).attack_to( [ Vector2( 25, get_node( \"german_company1\" ).get_pos().y ) ] )\n\ttimer.connect( \"timeout\", self, \"_chace_allies\" )\n\ttimer.set_wait_time( 10 )\n\ttimer.start()\n\tpass\nfunc _end_game():\n\ttimer.stop()\n\nfunc _chace_allies():\n\tvar companies = get_tree().get_nodes_in_group( \"nazis_company\" )\n\tfor c in companies:\n\t\tc.set_men_speed( 70 )\n\tif get_node( \"german_company\" ):\n\t\tget_node( \"german_company\" ).attack_to( [ Vector2( get_node( \"p_1\" ).get_pos() ) ] )\n\tif get_node( \"german_company1\" ):\n\t\tget_node( \"german_company1\" ).attack_to( [ Vector2( 25, get_node( \"p_2\" ).get_pos().y ) ] )\n\t#var ally = get_node( \"allied_company_1\" )\n\t#if companies.size() > 0 and ally != null:\n\t#\tcompanies[0].attack_company( ally )\n\t#var ally = get_node( \"allied_company_2\" )\n\t#if companies.size() > 1 and ally != null:\n\t#\tcompanies[0].attack_company( ally )\n"

[sub_resource type="Animation" id=15]

resource/name = "flash"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("highlight:color")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.313726 ) ] }

[sub_resource type="Animation" id=16]

resource/name = "stop"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("highlight:color")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":0, "values":[ Color( 1, 1, 1, 0 ) ] }

[node name="level_3" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = { "_edit_lock_":true }
available_time = 60
levelno = 3

[node name="anoucing_layer" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="anim" type="AnimationPlayer" parent="anoucing_layer"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/bink_loose = SubResource( 1 )
anims/blink = SubResource( 2 )
anims/blink_texp = SubResource( 3 )
anims/blink_win = SubResource( 4 )
anims/unblink = SubResource( 5 )
anims/unblink_loose = SubResource( 6 )
anims/unblink_texp = SubResource( 7 )
anims/unblink_win = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="anouncer" parent="anoucing_layer" instance=ExtResource( 2 )]

visibility/visible = false

[node name="navigation" type="Navigation2D" parent="."]

__meta__ = { "_edit_lock_":true }

[node name="NavigationPolygonInstance 2" type="NavigationPolygonInstance" parent="navigation"]

navpoly = SubResource( 9 )
enabled = true

[node name="background" type="Node2D" parent="."]

editor/display_folded = true
__meta__ = { "_edit_lock_":true }

[node name="sky" type="Sprite" parent="background"]

texture = ExtResource( 3 )
centered = false
__meta__ = { "_edit_lock_":true }

[node name="mountain" type="Sprite" parent="background"]

transform/pos = Vector2( 0, 27 )
texture = ExtResource( 4 )
centered = false
__meta__ = { "_edit_lock_":true }

[node name="TileMap" type="TileMap" parent="background"]

mode = 0
tile_set = ExtResource( 5 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 393216, 0, 393217, 0, 393218, 0, 393219, 0, 393220, 0, 393221, 0, 393222, 0, 393223, 0, 393224, 0, 393225, 0, 393226, 0, 393227, 0, 393228, 0, 393229, 0, 393230, 0, 393231, 0, 393232, 0, 393233, 0, 393234, 0, 393235, 0, 458752, 0, 458753, 0, 458754, 0, 458755, 0, 458756, 0, 458757, 0, 458758, 0, 458759, 0, 458760, 0, 458761, 0, 458762, 0, 458763, 0, 458764, 0, 458765, 0, 458766, 0, 458767, 0, 458768, 0, 458769, 0, 458770, 0, 458771, 0, 524288, 0, 524289, 0, 524290, 0, 524291, 0, 524292, 0, 524293, 0, 524294, 0, 524295, 0, 524296, 0, 524297, 0, 524298, 0, 524299, 0, 524300, 0, 524301, 0, 524302, 0, 524303, 0, 524304, 0, 524305, 0, 524306, 0, 524307, 0, 589824, 0, 589825, 0, 589826, 0, 589827, 0, 589828, 0, 589829, 0, 589830, 0, 589831, 0, 589832, 0, 589833, 0, 589834, 0, 589835, 0, 589836, 0, 589837, 0, 589838, 0, 589839, 0, 589840, 0, 589841, 0, 589842, 0, 589843, 0, 655360, 0, 655361, 0, 655362, 0, 655363, 0, 655364, 0, 655365, 0, 655366, 0, 655367, 0, 655368, 0, 655369, 0, 655370, 0, 655371, 0, 655372, 0, 655373, 0, 655374, 0, 655375, 0, 655376, 0, 655377, 0, 655378, 0, 655379, 0, 720896, 0, 720897, 0, 720898, 0, 720899, 0, 720900, 0, 720901, 0, 720902, 0, 720903, 0, 720904, 0, 720905, 0, 720906, 0, 720907, 0, 720908, 0, 720909, 0, 720910, 0, 720911, 0, 720912, 0, 720913, 0, 720914, 0, 720915, 0, 786432, 0, 786433, 0, 786434, 0, 786435, 0, 786436, 0, 786437, 0, 786438, 0, 786439, 0, 786440, 0, 786441, 0, 786442, 0, 786443, 0, 786444, 0, 786445, 0, 786446, 0, 786447, 0, 786448, 0, 786449, 0, 786450, 0, 786451, 0, 851968, 0, 851969, 0, 851970, 0, 851971, 0, 851972, 0, 851973, 0, 851974, 0, 851975, 0, 851976, 0, 851977, 0, 851978, 0, 851979, 0, 851980, 0, 851981, 0, 851982, 0, 851983, 0, 851984, 0, 851985, 0, 851986, 0, 851987, 0, 917504, 0, 917505, 0, 917506, 0, 917507, 0, 917508, 0, 917509, 0, 917510, 0, 917511, 0, 917512, 0, 917513, 0, 917514, 0, 917515, 0, 917516, 0, 917517, 0, 917518, 0, 917519, 0, 917520, 0, 917521, 0, 917522, 0, 917523, 0 )
__meta__ = { "_edit_lock_":true }

[node name="outer_barrier" type="StaticBody2D" parent="."]

editor/display_folded = true
visibility/visible = false
input/pickable = false
shapes/0/shape = SubResource( 10 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 11 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 12 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 13 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 0.0
bounce = 0.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="outer_barrier"]

build_mode = 0
polygon = Vector2Array( 640, 0, 640, 480, 0, 480, 0, 0, 640, 0, 676, -65, -84, -51, -54, 559, 703, 555, 676, -65 )
shape_range = Vector2( 0, 3 )
trigger = false

[node name="foreground" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 5 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = true
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 393225, 8, 393231, 6, 393235, 5, 458760, 5, 458761, 13, 458765, 8, 458771, 5, 524290, 15, 524291, 7, 524297, 8, 524304, 14, 524305, 7, 589826, 14, 589827, 12, 589832, 5, 589833, 5, 589835, 8, 589836, 8, 589841, 15, 655363, 4, 655369, 8, 655370, 13, 655371, 5, 655372, 13, 655373, 8, 655374, 7, 720907, 5, 786447, 9, 851971, 11, 851976, 15, 851977, 14, 851978, 12, 917522, 8, 917523, 13 )
script/script = SubResource( 14 )
__meta__ = { "_edit_lock_":true }

[node name="allied_company_1" parent="foreground" instance=ExtResource( 6 )]

transform/pos = Vector2( 22, 133 )
size = Vector2( 4, 5 )
separation = Vector2( 8, 8 )

[node name="allied_company_2" parent="foreground" instance=ExtResource( 6 )]

transform/pos = Vector2( 22, 215 )
size = Vector2( 4, 5 )
separation = Vector2( 8, 8 )

[node name="german_company" parent="foreground" instance=ExtResource( 6 )]

transform/pos = Vector2( 244, 117 )
size = Vector2( 4, 5 )
separation = Vector2( 8, 8 )
groupname = "nazis"

[node name="german_company1" parent="foreground" instance=ExtResource( 6 )]

transform/pos = Vector2( 310, 215 )
size = Vector2( 3, 5 )
separation = Vector2( 8, 8 )
groupname = "nazis"

[node name="ctrltimer" type="Timer" parent="foreground"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="tree_1" parent="foreground" instance=ExtResource( 7 )]

transform/pos = Vector2( 204, 161 )

[node name="tree_2" parent="foreground" instance=ExtResource( 7 )]

transform/pos = Vector2( 194, 167 )
frame = 0

[node name="tree_3" parent="foreground" instance=ExtResource( 7 )]

transform/pos = Vector2( 187, 159 )
frame = 0

[node name="tree_4" parent="foreground" instance=ExtResource( 7 )]

transform/pos = Vector2( 178, 166 )

[node name="tree_13" parent="foreground" instance=ExtResource( 7 )]

transform/pos = Vector2( 178, 166 )

[node name="tree_5" parent="foreground" instance=ExtResource( 7 )]

transform/pos = Vector2( 170.547, 158.876 )

[node name="tree_6" parent="foreground" instance=ExtResource( 7 )]

transform/pos = Vector2( 219, 161 )
frame = 0

[node name="tree_7" parent="foreground" instance=ExtResource( 7 )]

transform/pos = Vector2( 159, 154 )
frame = 0

[node name="tree_8" parent="foreground" instance=ExtResource( 7 )]

transform/pos = Vector2( 160, 140 )
frame = 0

[node name="tree_9" parent="foreground" instance=ExtResource( 7 )]

transform/pos = Vector2( 170, 131 )
frame = 0

[node name="tree_10" parent="foreground" instance=ExtResource( 7 )]

transform/pos = Vector2( 155, 118 )
frame = 0

[node name="tree_11" parent="foreground" instance=ExtResource( 7 )]

transform/pos = Vector2( 164, 105 )
frame = 0

[node name="tree_12" parent="foreground" instance=ExtResource( 7 )]

transform/pos = Vector2( 212, 167 )
frame = 0

[node name="p_1" type="Position2D" parent="foreground"]

transform/pos = Vector2( 292, 162 )

[node name="p_2" type="Position2D" parent="foreground"]

transform/pos = Vector2( 134, 212 )

[node name="highlightlayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="anim" type="AnimationPlayer" parent="highlightlayer"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/flash = SubResource( 15 )
anims/stop = SubResource( 16 )
next/flash = "stop"
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="highlight" type="Polygon2D" parent="highlightlayer"]

polygon = Vector2Array( 72, 90, 95, 90, 95, 133, 72, 133 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 0.0664472 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0
__meta__ = { "_edit_lock_":true }

[node name="highlight_timer" type="Timer" parent="highlightlayer"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="highlightlayer/highlight_timer" to="." method="_on_highlight_timer_timeout"]


